[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/brain_boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://boss_battle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 37.7924, 548.733 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 42.3401, 548.942 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 70, 401 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 63.25, 373 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.375, 329 )

[node name="boss_battle" type="Node2D"]
script = ExtResource( 2 )

[node name="brain_boss" parent="." instance=ExtResource( 1 )]
position = Vector2( 879, 308 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 525, 640 )
rotation = 1.57205
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 521, -43 )
rotation = 1.57205
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1088, 308 )
shape = SubResource( 5 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( -67, 306 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 156.625, 303 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
